adding photo html seperatly

--- a/data/excel_transformer.ipynb
+++ b/data/excel_transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "institutional-builder",
+   "id": "noble-slovenia",
    "metadata": {},
    "source": [
     "## Import librearies\n"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "environmental-excellence",
+   "execution_count": 2,
+   "id": "challenging-claim",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "nasty-general",
+   "execution_count": 3,
+   "id": "recovered-walter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "affecting-syndrome",
+   "execution_count": 4,
+   "id": "legal-reasoning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "ancient-ratio",
+   "execution_count": 5,
+   "id": "legitimate-edward",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "flush-copying",
+   "execution_count": 6,
+   "id": "horizontal-lightweight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hollywood-travel",
+   "id": "essential-springer",
    "metadata": {},
    "source": [
     "## Load excel file"
@@ -71,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "premier-seeking",
+   "execution_count": 7,
+   "id": "experienced-robert",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "sealed-morning",
+   "execution_count": 8,
+   "id": "common-barbados",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
        "[700 rows x 22 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,8 +583,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "exceptional-restriction",
+   "execution_count": 9,
+   "id": "behind-expense",
    "metadata": {
     "tags": []
    },
@@ -617,7 +617,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,8 +628,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "equal-craps",
+   "execution_count": 10,
+   "id": "exempt-cherry",
    "metadata": {
     "tags": []
    },
@@ -1084,7 +1084,7 @@
        "[700 rows x 19 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,8 +1095,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "compound-counter",
+   "execution_count": 11,
+   "id": "fundamental-ambassador",
    "metadata": {
     "tags": []
    },
@@ -1171,7 +1171,7 @@
        "[700 rows x 0 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "liquid-launch",
+   "id": "living-canyon",
    "metadata": {},
    "source": [
     "## Import images"
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "floral-space",
+   "id": "humanitarian-scottish",
    "metadata": {},
    "source": [
     "keep building id column from excel"
@@ -1198,8 +1198,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "fiscal-louisiana",
+   "execution_count": 12,
+   "id": "agricultural-necessity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1208,8 +1208,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "described-crisis",
+   "execution_count": 13,
+   "id": "remarkable-beauty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sharp-segment",
+   "id": "synthetic-ready",
    "metadata": {},
    "source": [
     "Load files from the photo folder"
@@ -1226,8 +1226,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "collaborative-corruption",
+   "execution_count": 14,
+   "id": "behind-maker",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,8 +1236,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "approximate-bikini",
+   "execution_count": 15,
+   "id": "monthly-phoenix",
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1246,7 @@
        "764"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1257,8 +1257,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "pregnant-joshua",
+   "execution_count": 16,
+   "id": "empty-inclusion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1267,9 +1267,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "warming-liability",
+   "execution_count": 17,
+   "id": "novel-premiere",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -2042,7 +2046,7 @@
        " 'תרצה 23-שלמה-5_7187.jpg']"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2053,8 +2057,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "vocational-bullet",
+   "execution_count": 18,
+   "id": "guilty-northeast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2066,8 +2070,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "reliable-bubble",
+   "execution_count": 19,
+   "id": "adjacent-kazakhstan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2076,8 +2080,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "stainless-navigation",
+   "execution_count": 20,
+   "id": "impressive-ability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2086,8 +2090,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "fatal-alpha",
+   "execution_count": 21,
+   "id": "postal-services",
    "metadata": {
     "tags": []
    },
@@ -2135,8 +2139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "endless-dylan",
+   "execution_count": 22,
+   "id": "ranking-transcription",
    "metadata": {},
    "outputs": [
     {
@@ -2172,8 +2176,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "traditional-balance",
+   "execution_count": 23,
+   "id": "preceding-asian",
    "metadata": {},
    "outputs": [
     {
@@ -2182,7 +2186,7 @@
        "-1"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2193,8 +2197,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "religious-colony",
+   "execution_count": 24,
+   "id": "opened-guide",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2203,8 +2207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "empty-mexican",
+   "execution_count": 25,
+   "id": "compatible-lloyd",
    "metadata": {},
    "outputs": [
     {
@@ -2234,7 +2238,7 @@
        " 'n_kindergartens']"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2245,8 +2249,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "looking-behalf",
+   "execution_count": 26,
+   "id": "particular-capital",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2269,8 +2273,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "accessory-house",
+   "execution_count": 41,
+   "id": "russian-cycle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2278,8 +2282,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "suffering-miller",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<p class=\"n_kindergartens\" style=\"display:none;\">0</p>'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp_div_inside"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "coordinated-design",
+   "id": "productive-auditor",
    "metadata": {},
    "source": [
     "Load html > parse to string > insert after '<div class=\"grid\">' > export as html"
@@ -2287,8 +2312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "boxed-spencer",
+   "execution_count": 29,
+   "id": "rotary-rachel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2297,8 +2322,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "appreciated-causing",
+   "execution_count": 30,
+   "id": "selective-ontario",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2307,8 +2332,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "numeric-singer",
+   "execution_count": 31,
+   "id": "stainless-parish",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2317,8 +2342,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "clean-tradition",
+   "execution_count": 32,
+   "id": "scenic-packaging",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2331,8 +2356,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "supported-brooks",
+   "execution_count": 33,
+   "id": "antique-roulette",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2342,8 +2367,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "fantastic-system",
+   "execution_count": 34,
+   "id": "laughing-precipitation",
    "metadata": {},
    "outputs": [
     {
@@ -2352,7 +2377,7 @@
        "str"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2363,8 +2388,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "civil-rebel",
+   "execution_count": 35,
+   "id": "utility-parker",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2374,8 +2399,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "funky-magnitude",
+   "execution_count": 36,
+   "id": "essential-gossip",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2384,8 +2409,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "terminal-television",
+   "execution_count": 37,
+   "id": "noble-diving",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2394,8 +2419,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "isolated-postage",
+   "execution_count": 38,
+   "id": "foster-lightning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2404,8 +2429,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "id": "resistant-harmony",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#strhtm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "phantom-gamma",
+   "metadata": {},
+   "source": [
+    "push only mid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "upset-humanitarian",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1199062"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# open the file in w mode\n",
+    "# set encoding to UTF-8\n",
+    "with open(\"../bld_img_atr.html\", \"w\", encoding = 'utf-8') as file:\n",
+    "    \n",
+    "    # prettify the soup object and convert it into a string  \n",
+    "    file.write(grid_items)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "indoor-nutrition",
+   "metadata": {},
+   "source": [
+    "push everything"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 74,
-   "id": "russian-bridal",
+   "id": "tender-phase",
    "metadata": {},
    "outputs": [
     {
@@ -2431,7 +2508,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "julian-neighbor",
+   "id": "modular-vehicle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2440,7 +2517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aggressive-increase",
+   "id": "broke-advancement",
    "metadata": {},
    "source": [
     "## Generate an executable (.exe) file from the jupyter-notebook"
@@ -2449,7 +2526,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "noble-noise",
+   "id": "nearby-excellence",
    "metadata": {},
    "outputs": [
     {
@@ -2474,7 +2551,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "upset-usage",
+   "id": "swiss-devices",
    "metadata": {},
    "outputs": [
     {
@@ -2493,7 +2570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "extensive-length",
+   "id": "neural-receiver",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2504,7 +2581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "speaking-executive",
+   "id": "everyday-publication",
    "metadata": {},
    "outputs": [],
    "source": [
