changes to jupyterlab + NOTHING WORKS

--- a/data/excel_transformer.ipynb
+++ b/data/excel_transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ranking-monday",
+   "id": "alike-given",
    "metadata": {},
    "source": [
     "## Import librearies\n"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "suburban-baghdad",
+   "execution_count": 73,
+   "id": "expanded-novelty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "modular-youth",
+   "execution_count": 74,
+   "id": "moving-destination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "stopped-monkey",
+   "execution_count": 75,
+   "id": "nearby-complexity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "unique-portal",
+   "execution_count": 76,
+   "id": "quiet-reputation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "christian-cooperation",
+   "execution_count": 77,
+   "id": "understood-appointment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blind-optimization",
+   "id": "three-nothing",
    "metadata": {},
    "source": [
     "## Load excel file"
@@ -71,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "capable-large",
+   "execution_count": 78,
+   "id": "north-dream",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "married-insert",
+   "execution_count": 79,
+   "id": "radio-terminology",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
        "[700 rows x 22 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,8 +583,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "polished-speech",
+   "execution_count": 80,
+   "id": "pregnant-warehouse",
    "metadata": {
     "tags": []
    },
@@ -617,7 +617,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,8 +628,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "extreme-leone",
+   "execution_count": 81,
+   "id": "preceding-explorer",
    "metadata": {
     "tags": []
    },
@@ -1084,7 +1084,7 @@
        "[700 rows x 19 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,8 +1095,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "formal-serbia",
+   "execution_count": 82,
+   "id": "precious-mediterranean",
    "metadata": {
     "tags": []
    },
@@ -1171,7 +1171,7 @@
        "[700 rows x 0 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "scenic-cologne",
+   "id": "third-lyric",
    "metadata": {},
    "source": [
     "## Import images"
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "static-houston",
+   "id": "theoretical-evolution",
    "metadata": {},
    "source": [
     "keep building id column from excel"
@@ -1198,8 +1198,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "enhanced-partition",
+   "execution_count": 83,
+   "id": "martial-mainstream",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1208,8 +1208,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "integrated-running",
+   "execution_count": 84,
+   "id": "athletic-pattern",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acoustic-optimization",
+   "id": "solid-accused",
    "metadata": {},
    "source": [
     "Load files from the photo folder"
@@ -1226,8 +1226,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "valuable-security",
+   "execution_count": 85,
+   "id": "herbal-sewing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1236,8 +1236,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "industrial-moldova",
+   "execution_count": 86,
+   "id": "victorian-honolulu",
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1246,7 @@
        "764"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1257,8 +1257,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "convenient-hampshire",
+   "execution_count": 87,
+   "id": "twenty-apache",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1267,8 +1267,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "legislative-ivory",
+   "execution_count": 88,
+   "id": "uniform-southwest",
    "metadata": {
     "tags": []
    },
@@ -2042,7 +2042,7 @@
        " 'תרצה 23-שלמה-5_7187.jpg']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2053,8 +2053,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "close-karen",
+   "execution_count": 89,
+   "id": "ordered-karaoke",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2066,8 +2066,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "turned-gauge",
+   "execution_count": 90,
+   "id": "pursuant-garden",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2076,8 +2076,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "senior-medication",
+   "execution_count": 91,
+   "id": "simplified-couple",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2086,8 +2086,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "expressed-processing",
+   "execution_count": 92,
+   "id": "wrong-arctic",
    "metadata": {
     "tags": []
    },
@@ -2135,8 +2135,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "skilled-workplace",
+   "execution_count": 93,
+   "id": "dried-republic",
    "metadata": {},
    "outputs": [
     {
@@ -2172,8 +2172,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "damaged-journalist",
+   "execution_count": 94,
+   "id": "pretty-composer",
    "metadata": {},
    "outputs": [
     {
@@ -2182,7 +2182,7 @@
        "-1"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2193,8 +2193,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "healthy-gasoline",
+   "execution_count": 95,
+   "id": "criminal-postage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2203,8 +2203,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "annoying-premium",
+   "execution_count": 96,
+   "id": "painted-lambda",
    "metadata": {},
    "outputs": [
     {
@@ -2234,7 +2234,7 @@
        " 'n_kindergartens']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2245,8 +2245,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "brutal-england",
+   "execution_count": 97,
+   "id": "pacific-mechanics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2255,7 +2255,7 @@
     "for index, row in df.iterrows():\n",
     "    #print(index, ': ', row)\n",
     "    inside_div_combined = '' # create empty string to append to \n",
-    "    tmp_div_open = '<div class=\"building_square\">' #  data-category=\"transition\"\n",
+    "    tmp_div_open = '<div class=\"building_square\">' #  NOTICE: adding grow function\n",
     "    #print(\"STARTING COLUMN PRINT\")\n",
     "    for col_index, col_name in enumerate(col_list):\n",
     "        tmp_div_inside = f'<p class=\"{col_name}\" style=\"display:none;\">{df.iloc[index, col_index]}</p>' # -----> NOTICE using a 'p'?\n",
@@ -2269,8 +2269,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "former-rugby",
+   "execution_count": 98,
+   "id": "vulnerable-brand",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2279,8 +2279,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "worthy-clause",
+   "execution_count": 99,
+   "id": "musical-concern",
    "metadata": {},
    "outputs": [
     {
@@ -2289,7 +2289,7 @@
        "'<p class=\"n_kindergartens\" style=\"display:none;\">0</p>'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2300,7 +2300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "entertaining-spending",
+   "id": "original-hotel",
    "metadata": {},
    "source": [
     "Load html > parse to string > insert after '<div class=\"grid\">' > export as html"
@@ -2308,8 +2308,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "aggregate-scholar",
+   "execution_count": 100,
+   "id": "narrow-sailing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2318,8 +2318,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "fifty-walker",
+   "execution_count": 101,
+   "id": "peaceful-welding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2328,8 +2328,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "following-colorado",
+   "execution_count": 102,
+   "id": "still-psychology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2338,8 +2338,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "fifty-modification",
+   "execution_count": 103,
+   "id": "numerical-level",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2352,8 +2352,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "southeast-berlin",
+   "execution_count": 104,
+   "id": "consolidated-tamil",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2363,8 +2363,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "occupied-guest",
+   "execution_count": 105,
+   "id": "demographic-research",
    "metadata": {},
    "outputs": [
     {
@@ -2373,7 +2373,7 @@
        "str"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2384,8 +2384,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "binary-field",
+   "execution_count": 106,
+   "id": "specified-lincoln",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2395,8 +2395,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "informal-allah",
+   "execution_count": 107,
+   "id": "greatest-nelson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2405,8 +2405,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "multiple-characteristic",
+   "execution_count": 108,
+   "id": "overhead-filing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2415,8 +2415,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "still-principle",
+   "execution_count": 109,
+   "id": "introductory-playlist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2425,8 +2425,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "portuguese-hello",
+   "execution_count": 110,
+   "id": "permanent-synthetic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2435,7 +2435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excessive-soundtrack",
+   "id": "oriented-pleasure",
    "metadata": {},
    "source": [
     "push only mid"
@@ -2443,8 +2443,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "contemporary-header",
+   "execution_count": 111,
+   "id": "lesser-utility",
    "metadata": {},
    "outputs": [
     {
@@ -2453,7 +2453,7 @@
        "1199062"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2469,7 +2469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "express-lincoln",
+   "id": "motivated-valve",
    "metadata": {},
    "source": [
     "push everything"
@@ -2477,17 +2477,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "accredited-turkish",
+   "execution_count": 112,
+   "id": "surface-savings",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1209066"
+       "1209727"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2503,8 +2503,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "thick-daughter",
+   "execution_count": 113,
+   "id": "confused-demonstration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2513,7 +2513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "careful-place",
+   "id": "lesbian-statistics",
    "metadata": {},
    "source": [
     "## Generate an executable (.exe) file from the jupyter-notebook"
@@ -2522,7 +2522,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "intimate-tsunami",
+   "id": "occupational-congo",
    "metadata": {},
    "outputs": [
     {
@@ -2547,7 +2547,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "indoor-parcel",
+   "id": "sound-sample",
    "metadata": {},
    "outputs": [
     {
@@ -2566,7 +2566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "activated-switch",
+   "id": "opposite-exchange",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2577,7 +2577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "prompt-village",
+   "id": "sealed-phoenix",
    "metadata": {},
    "outputs": [],
    "source": [
